finish:TODO: inject field