@@ -3,6 +3,7 @@ package com.wangyousong.practice.di;
 import jakarta.inject.Inject;
 
 import java.lang.reflect.Constructor;
+import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Parameter;
 import java.util.List;
@@ -12,9 +13,32 @@ import static java.util.Arrays.stream;
 
 class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider<T> {
     private final Constructor<T> injectConstructor;
+    public List<Field> injectFields;
 
     public ConstructorInjectionProvider(Class<T> component) {
         this.injectConstructor = getInjectConstructor(component);
+        this.injectFields = getInjectFields(component);
+    }
+
+    @Override
+    public T get(Context context) {
+        try {
+            Object[] dependencies = stream(injectConstructor.getParameters())
+                    .map(p -> context.get(p.getType()).get())
+                    .toArray(Object[]::new);
+            T instance = injectConstructor.newInstance(dependencies);
+            for (Field field : injectFields) {
+                field.set(instance, context.get(field.getType()).get());
+            }
+            return instance;
+        } catch (InvocationTargetException | InstantiationException | IllegalAccessException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    @Override
+    public List<Class<?>> getDependencies() {
+        return stream(injectConstructor.getParameters()).map(Parameter::getType).collect(Collectors.toList());
     }
 
     private static <Type> Constructor<Type> getInjectConstructor(Class<Type> implementation) {
@@ -26,27 +50,14 @@ class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider
 
         return (Constructor<Type>) injectConstructors.stream().findFirst().orElseGet(() -> {
             try {
-                return implementation.getConstructor();
+                return implementation.getDeclaredConstructor();
             } catch (NoSuchMethodException e) {
                 throw new IllegalComponentException();
             }
         });
     }
 
-    @Override
-    public T get(Context context) {
-        try {
-            Object[] dependencies = stream(injectConstructor.getParameters())
-                    .map(p -> context.get(p.getType()).get())
-                    .toArray(Object[]::new);
-            return injectConstructor.newInstance(dependencies);
-        } catch (InvocationTargetException | InstantiationException | IllegalAccessException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    @Override
-    public List<Class<?>> getDependencies() {
-        return stream(injectConstructor.getParameters()).map(Parameter::getType).collect(Collectors.toList());
+    private static <T> List<Field> getInjectFields(Class<T> component) {
+        return stream(component.getDeclaredFields()).filter(f -> f.isAnnotationPresent(Inject.class)).toList();
     }
 }
